exports[`test renders PaymentOptionsLayout when state is true 1`] = `
<PaymentOptionsLayout
  changeAccounts={[Function]}
  choose={[Function]}
  goToStepOne={[Function]}
  savedAccount={Object {}}
  savedAccounts={Array []} />
`;

exports[`test renders ScheduleLayout if schedules 1`] = `
<ScheduleLayout
  back={[Function]}
  changeAccounts={[Function]}
  goToStepOne={[Function]}
  header={
    <span>
      header
    </span>
  }
  savedAccount={Object {}}
  scheduleToRecover={false}
  schedules={
    Object {
      "123": "123",
    }
  }
  total={12} />
`;

exports[`test renders TransactionLayout by default 1`] = `
<TransactionLayout
  back={[Function]}
  changeAccounts={[Function]}
  completeGift={[Function]}
  goToStepOne={[Function]}
  header={
    <span>
      header
    </span>
  }
  savedAccount={Object {}}
  scheduleToRecover={false}
  schedules={Object {}}
  total={12}
  transactions={
    Array [
      "1",
    ]
  } />
`;
